# Aspartame

./: .clang-format  .gitignore  CMakeLists.txt  README.md  example.cpp  poc_inlay.cpp
.github/workflows/: linux.yml  macos.yml  windows.yml
benchmark/: inplace.cpp  numeric.cpp  pipelines.cpp  reductions.cpp
example/: CMakeLists.txt  example-llvm.cpp  example.cpp
src/: AspartameConfig.cmake.in  CMakeLists.txt
src/aspartame/: all.hpp  array.hpp  associative.hpp  deque.hpp  expected.hpp  fluent.hpp  list.hpp  map.hpp  optional.hpp  set.hpp  string.hpp  traits.hpp  unordered_map.hpp  unordered_set.hpp  variant.hpp  vector.hpp  view.hpp
src/aspartame/details/: base.hpp  container1_impl.hpp  container1_template.hpp  container2_impl.hpp  container2_template.hpp  inplace_impl.hpp  iterators.hpp  map_impl.hpp  map_template.hpp  sequence1_impl.hpp  sequence1_template.hpp
src/aspartame/details/iterators/: append_prepend.hpp  bind.hpp  chunk_by.hpp  collect.hpp  combinations.hpp  concat.hpp  cross.hpp  distinct.hpp  drop_take.hpp  erased.hpp  filter.hpp  flat_map.hpp  iterate.hpp  iterator_base.hpp  map.hpp  pairwise.hpp  permutations.hpp  slice.hpp  sliding.hpp  stride.hpp  tap_each.hpp  zip.hpp
src/aspartame/details/nop/: map_template.hpp  optional_template.hpp  sequence_template.hpp  string_template.hpp
src/aspartame/ext/: abseil.hpp  boost.hpp  llvm.hpp  phmap.hpp  qt.hpp  tl_expected.hpp  tl_optional.hpp  tsl.hpp
test/: fixtures.hpp  test_array.cpp  test_base_container1.hpp  test_base_container2.hpp  test_base_harness.hpp  test_base_includes.hpp  test_closure_lifetime.cpp  test_compile_constexpr.cpp  test_compile_fail.cpp  test_deque.cpp  test_expected.cpp  test_ext_abseil.cpp  test_ext_abseil_btree_map.cpp  test_ext_abseil_btree_set.cpp  test_ext_abseil_flat_hash_map.cpp  test_ext_abseil_flat_hash_set.cpp  test_ext_abseil_inlined_vector.cpp  test_ext_boost.cpp  test_ext_boost_flat_map.cpp  test_ext_boost_flat_set.cpp  test_ext_boost_optional.cpp  test_ext_boost_small_vector.cpp  test_ext_boost_unordered_flat_map.cpp  test_ext_boost_unordered_flat_set.cpp  test_ext_llvm.cpp  test_ext_llvm_array_ref.cpp  test_ext_llvm_dense_map.cpp  test_ext_llvm_dense_set.cpp  test_ext_llvm_iterator_range.cpp  test_ext_llvm_map_vector.cpp  test_ext_llvm_set_vector.cpp  test_ext_llvm_small_dense_map.cpp  test_ext_llvm_small_string.cpp  test_ext_llvm_small_vector.cpp  test_ext_llvm_string_map.cpp  test_ext_llvm_string_ref.cpp  test_ext_llvm_string_set.cpp  test_ext_phmap.cpp  test_ext_phmap_flat_hash_map.cpp  test_ext_phmap_flat_hash_set.cpp  (+34 more)
test/ext/: llvm_dense_info.hpp  qt_print.hpp
test/templates/: test_template_any.hpp  test_template_container.hpp  test_template_expected.hpp  test_template_inplace.hpp  test_template_map.hpp  test_template_optional.hpp  test_template_sequence.hpp  test_template_view.hpp
